--- a/templates/login.html
+++ b/templates/login.html
@@ -43,6 +43,6 @@
         </div>
                
     </form>
-    <p class="text-center"><a href="">Create an Account</a></p>
+    <p class="text-center"><a href="/signup">Create an Account</a></p>
 </div>
 {% endblock %}
