set up frontend for user-conference requests

--- a/templates/login.html
+++ b/templates/login.html
@@ -44,5 +44,6 @@
                
     </form>
     <p class="text-center"><a href="/signup">Create an Account</a></p>
+    <p class="text-center"><a href="/main">VIP</a></p>
 </div>
 {% endblock %}
