--- a/templates/login.html
+++ b/templates/login.html
@@ -45,5 +45,6 @@
     </form>
     <p class="text-center"><a href="/signup">Create an Account</a></p>
     <p class="text-center"><a href="/main">VIP</a></p>
+    <p class="text-center"><a href="/conference">Conference Organizations</a></p>
 </div>
 {% endblock %}
