--- a/templates/signup.html
+++ b/templates/signup.html
@@ -44,7 +44,7 @@ body{
         <div class="form-group">
             <input type="text" class="form-control" name="lastname" placeholder="Lastname" required="required" >
         </div>
-        <!-- ?????????????????-->
+       
         <div class="form-group">
             <input type="text" class="form-control" name="affiliation" placeholder="Affiliation" required="required" >
         </div>
@@ -65,7 +65,7 @@ body{
         </div>
 
         <div class="form-group">
-            <input type="text" class="form-control" name="adress" placeholder="Address" required="required" >
+            <input type="text" class="form-control" name="address" placeholder="Address" required="required" >
         </div>
         
         <div class="form-group">
@@ -73,28 +73,24 @@ body{
         </div>
        
 
-        <!-- City and county parts will be edited-->
         <div class="form-group">       
             <select class="form-control" name="city"  required="required" >
-                <option disabled selected>City</option>
-                <option>Ankara</option>     
+                <option disabled selected>Select your city and country</option>
+                {% for city in cities %}
+                    <option >{{ city.city_name }} - {{city.country_code}}</option> 
+                {% endfor %}        
             </select>
         </div>
-        <div class="form-group">       
-            <select class="form-control" name="country"  required="required" >
-                <option disabled selected>Country</option>
-                <option>Turkey</option>     
-            </select>
-        </div>
+        
 
-        <div class="form-group">
+        <!-- <div class="form-group">
             <input type="text" class="form-control" name="username" placeholder="Username" required="required" >
-        </div>
+        </div> -->
         <div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="Password" minlength="4" required="required" >
         </div>
         <div class="form-group">
-            <input type="password" class="form-control" name="repassword" placeholder="Confirm Password" required="required">
+            <input type="password" class="form-control" name="confirmpassword" placeholder="Confirm Password" required="required">
         </div>
         <div class="form-group">
             <button type="submit" name="submit" class="btn btn-lg btn-primary btn-block">Sign Up</button>
