--- a/templates/signup.html
+++ b/templates/signup.html
@@ -31,7 +31,7 @@ body{
 {%endblock%}
 
 {% block body %}
-<div class="error text-center"> </div>
+<div class="error text-center">{{error}}</div>
 <div class="login-form">
     <form action = "" method = "post" class="form-signin">
         <h2 class="text-center">Sign Up</h2>       
