--- a/templates/login.html
+++ b/templates/login.html
@@ -26,14 +26,14 @@
 
 {% block body %}
 
-<div class="error text-center"></div>
+<div class="error text-center">{{error}}</div>
 
 
 <div class="login-form">
     <form action = "" method = "post">
         <h2 class="text-center">Log in</h2>       
         <div class="form-group">
-            <input type="text" class="form-control" name="username" placeholder="Username" required="required" autofocus>
+            <input type="text" class="form-control" name="email" placeholder="Primary Email" required="required" autofocus>
         </div>
         <div class="form-group">
             <input type="password" class="form-control" name="password" placeholder="Password" required="required">
