corrected the foreign key in conferenceroles table, and added user.html

--- a/templates/user.html
+++ b/templates/user.html
@@ -1,9 +1,88 @@
 {% extends "base.html" %}
+{% block head %}   
+<style>
+.center {
+    margin-left: 45%;
+}
+.name {
+    margin-left: 20%;
+}
+.tick {
+    background-color: Transparent;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    margin-left: 90px;
+}
+.cross {
+    background-color: Transparent;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    margin-left: 10px;
+}
+.error {
+    font-size:18px;
+    color:#cc0000; 
+    margin-top:30px
+}
+.main-page {
+    margin: 50px 50px;
+  	font-size: 15px;
+}
+.vertical-menu {
+    width: 800px;
+    height: 450px;
+    overflow-y: auto;
+}
 
+.vertical-menu a {
+    background-color: #eee;
+    color: black;
+    display: block;
+    padding: 12px;
+    text-decoration: none;
+}
+
+.vertical-menu a:hover {
+    background-color: #ccc;
+}
+
+.vertical-menu a.active {
+    background-color: #4CAF50;
+    color: white;
+}
+</style>
+{% endblock %}
 {% block body %}
 <nav class="navbar navbar-light bg-light">
     <form class="form-inline" style="margin-left:auto">
       <button class="btn btn-outline-success" type="button">Add new conference</button>
     </form>
   </nav>
+  <!--will be edited-->
+  <div class="main-page">
+    <form action="" method="post">
+       <tbody>
+          <div class="vertical-menu">
+                <a href="#" class="active">
+                   <span class="center">
+                      Conferences
+                   </span>
+                </a>
+                {% for conference in conferences %}
+                   <a>
+                      <span class="name">{{ conference.name }}</span>
+                      {%if conference.confid_role == 0 %}
+                      <button type="submit" name="update" value="{{ conference.confid }}" class="btn btn-success" style='margin-left:40px'> Update </button>
+                      <button type="submit" name="delete" value="{{ conference.confid }}" class="btn btn-danger" > Delete </button>
+                      {%endif%}
+                   </a>
+                {% endfor %}
+          </div>
+       </tbody>
+    </form>
+   </div> 
 {% endblock %}
