add new submission form with backend

--- a/templates/newSubmission.html
+++ b/templates/newSubmission.html
@@ -55,32 +55,20 @@ $( function() {
             </select>
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" name="shortname" placeholder="Short Name" required="required">
+            <input type="text" class="form-control" name="title" placeholder="Title" required="required">
         </div>
         <div class="form-group">
-            <input type="text" class="form-control" name="year" placeholder="Year" required="required" >
-        </div>
-        
-        <div class="form-group">
-            <label style="font-size:15px;"> Start Date  </label>
-            <input id="datepicker" type="date" data-date="" data-date-format="DD/MM/YYYY" class="form-control" name="start_date" placeholder="Start Date" required="required" >
+            <input type="text" class="form-control" name="abstract" placeholder="Abstract" required="required" >
         </div>
         <div class="form-group">
-            <label style="font-size:15px;"> End Date  </label>
-            <input type="date" data-date="" data-date-format="DD/MM/YYYY" class="form-control" name="end_date" placeholder="End Date" required="required" >
+            <input type="text" class="form-control" name="keywords" placeholder="Keywords" required="required" >
         </div>
         <div class="form-group">
-            <label style="font-size:15px;"> Submission Deadline  </label>
-            <input id="date3" type="date" data-date="" data-date-format="DD/MM/YYYY" class="form-control" name="submission_deadline" placeholder="Submission Date" required="required" >
+            <input type="text" class="form-control" name="pdf_path" placeholder="PDF Path" required="required" >
         </div>
-        
-        <div class="form-group">
-            <input type="url" class="form-control" name="website" placeholder="https://example.com" required="required" >
-        </div>
-
-            <button type="submit" name="submit" class="btn btn-lg btn-primary btn-block">Create</button>
-        </div>
-            
+        <div>
+            <button type="submit" name="submit" class="btn btn-lg btn-primary btn-block">Submit</button>
+        </div> 
     </form>
     
 </div>
