--- a/templates/user.html
+++ b/templates/user.html
@@ -7,7 +7,7 @@
     <a href="{{url_for('submissions', userid=userid)}}" class="btn btn-outline-primary" >Submissions</a>
     <form class="form-inline" style="margin-left:auto">
         <a href="{{url_for('user_changeInfo', id=userid)}}" class="btn btn-info" >Change your info </a>
-        <a href="#" class="btn btn-info" style="margin-left:5px" > Give authentication a user </a>     
+        <a href="{{url_for('user_giveAuthentication', userid=userid)}}" class="btn btn-info" style="margin-left:5px" > Give authentication a user </a>     
         <a href="{{url_for('conference', userid=userid)}}" class="btn btn-outline-success" style="margin-left:5px" > Add New Conference </a>
     </form>
   </nav>
