--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -6,7 +6,7 @@
 
 <nav class="navbar navbar-light bg-light">
     <form class="form-inline" style="margin-left:auto">
-        <a href="{{url_for('newSubmission', userid=userid)}}" class="btn btn-outline-danger" > Add New Submission </a>
+        <a href="#" class="btn btn-outline-secondary  btn-lg disabled" style="margin-right:730px">  Submissions </a>
     </form>
 </nav>
 
