Added author option for roles

--- a/templates/confAuth.html
+++ b/templates/confAuth.html
@@ -55,7 +55,8 @@ body{
             <select class="form-control" name="roles"  required="required" >
                 <option disabled selected>Choose role</option>
                     <option >Chair</option>    
-                    <option >Reviewer</option>    
+                    <option >Reviewer</option> 
+                    <option >Author</option>    
             </select>
         </div>
         <div class="form-group">
